--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@mastodon/mastodon",
+  "description": "mastodon",
   "license": "AGPL-3.0-or-later",
   "engines": {
     "node": ">=14"
   },
   "scripts": {
     "postversion": "git push --tags",
-    "build:development": "cross-env RAILS_ENV=development NODE_ENV=development ./bin/webpack",
-    "build:production": "cross-env RAILS_ENV=production NODE_ENV=production ./bin/webpack",
+    "build:development": "cross-env NODE_ENV=development webpack --config config/webpack/development.js",
+    "build:production": "cross-env NODE_ENV=production webpack --config config/webpack/production.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack/production.js",
     "manage:translations": "node ./config/webpack/translationRunner.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack/development.js --progress --color",
     "start": "node ./streaming/index.js",
     "test": "${npm_execpath} run test:lint:js && ${npm_execpath} run test:jest",
     "test:lint": "${npm_execpath} run test:lint:js && ${npm_execpath} run test:lint:sass",
@@ -48,6 +51,7 @@
     "blurhash": "^2.0.4",
     "classnames": "^2.3.2",
     "cocoon-js-vanilla": "^1.3.0",
+    "babel-runtime": "^6.26.0",
     "color-blend": "^3.0.1",
     "compression-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.3",
